--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.56.2",
+    "animate.css": "^4.1.1",
+    "animate.css-react": "^1.1.0",
     "axios": "^1.7.7",
     "firebase": "^10.13.2",
     "react": "^18.3.1",
@@ -39,6 +41,7 @@
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "postcss": "^8.4.47",
+    "prettier": "^3.3.3",
     "tailwindcss": "^3.4.12",
     "vite": "^5.4.1"
   }
