--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.1.1",
+    "@mui/styled-engine-sc": "^6.1.1",
     "@tanstack/react-query": "^5.56.2",
     "animate.css": "^4.1.1",
     "animate.css-react": "^1.1.0",
@@ -18,13 +22,17 @@
     "react": "^18.3.1",
     "react-awesome-reveal": "^4.2.14",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-router": "^6.26.2",
     "react-router-dom": "^6.26.2",
+    "react-slick": "^0.30.2",
+    "react-sweetalert2": "^0.6.0",
     "react-toast": "^1.0.3",
     "react-toastify": "^10.0.5",
+    "styled-components": "^6.1.13",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.6.13"
   },
